name:           uni-htk
version:        1.1
license:        LGPL
license-file:   ../LIZENZ.txt
author:         uniform@informatik.uni-bremen.de
homepage:       http://www.informatik.uni-bremen.de/htk/
category:       GUI
synopsis:       Graphical User Interface for Haskell Programs
description:    GUI toolkit based on Tcl/Tk
exposed-modules: Htk.Kernel.BaseClasses, Htk.Kernel.ButtonWidget,
  Htk.Kernel.CallWish, Htk.Kernel.Colour, Htk.Kernel.Configuration,
  Htk.Kernel.Core, Htk.Kernel.Cursor, Htk.Kernel.EventInfo, Htk.Kernel.Font,
  Htk.Kernel.GUIObject, Htk.Kernel.GUIObjectKind, Htk.Kernel.GUIObjectName,
  Htk.Kernel.GUIValue, Htk.Kernel.Geometry, Htk.Kernel.GridPackOptions,
  Htk.Kernel.PackOptions, Htk.Kernel.Packer, Htk.Kernel.Resources,
  Htk.Kernel.TkVariables, Htk.Kernel.Tooltip, Htk.Kernel.Wish,
  Htk.Containers.Box, Htk.Containers.Frame, Htk.Containers.Toplevel,
  Htk.Containers.Window, Htk.Components.BitMap, Htk.Components.Focus,
  Htk.Components.ICursor, Htk.Components.Icon, Htk.Components.Image,
  Htk.Components.Index, Htk.Components.Selection, Htk.Components.Slider,
  Htk.Devices.Bell, Htk.Devices.Printer, Htk.Devices.Screen,
  Htk.Devices.XSelection, Htk.Tix.LabelFrame, Htk.Tix.NoteBook,
  Htk.Tix.PanedWindow, Htk.Tix.Subwidget, Htk.Menuitems.Indicator,
  Htk.Menuitems.Menu, Htk.Menuitems.MenuCascade,
  Htk.Menuitems.MenuCheckButton, Htk.Menuitems.MenuCommand,
  Htk.Menuitems.MenuItem, Htk.Menuitems.MenuRadioButton,
  Htk.Menuitems.MenuSeparator, Htk.Widgets.Button, Htk.Widgets.Canvas,
  Htk.Widgets.CheckButton, Htk.Widgets.ComboBox, Htk.Widgets.Editor,
  Htk.Widgets.Entry, Htk.Widgets.Label, Htk.Widgets.ListBox,
  Htk.Widgets.MenuButton, Htk.Widgets.Message, Htk.Widgets.OptionMenu,
  Htk.Widgets.RadioButton, Htk.Widgets.Scale, Htk.Widgets.ScrollBar,
  Htk.Widgets.Space, Htk.Canvasitems.Arc, Htk.Canvasitems.BitMapItem,
  Htk.Canvasitems.CanvasItem, Htk.Canvasitems.CanvasItemAux,
  Htk.Canvasitems.CanvasTag, Htk.Canvasitems.EmbeddedCanvasWin,
  Htk.Canvasitems.ImageItem, Htk.Canvasitems.Line, Htk.Canvasitems.Oval,
  Htk.Canvasitems.Polygon, Htk.Canvasitems.Rectangle,
  Htk.Canvasitems.TextItem, Htk.Textitems.EmbeddedTextWin, Htk.Textitems.Mark,
  Htk.Textitems.TextTag, Htk.Toplevel.HTk, Htk.Toolkit.CItem,
  Htk.Toolkit.DialogWin, Htk.Toolkit.FileDialog, Htk.Toolkit.GenGUI,
  Htk.Toolkit.GenericBrowser, Htk.Toolkit.HTkMenu, Htk.Toolkit.IconBar,
  Htk.Toolkit.InputForm, Htk.Toolkit.InputWin, Htk.Toolkit.LogWin,
  Htk.Toolkit.MarkupText, Htk.Toolkit.MenuType, Htk.Toolkit.ModalDialog,
  Htk.Toolkit.Name, Htk.Toolkit.Notepad, Htk.Toolkit.Prompt,
  Htk.Toolkit.ScrollBox, Htk.Toolkit.SelectBox, Htk.Toolkit.Separator,
  Htk.Toolkit.SimpleForm, Htk.Toolkit.SimpleListBox, Htk.Toolkit.SpinButton,
  Htk.Toolkit.TextDisplay, Htk.Toolkit.TreeList
build-depends: base, haskell98, uni-util, uni-events, uni-posixutil,
  uni-reactor
ghc-options: -O -fglasgow-exts -fallow-overlapping-instances
  -fallow-undecidable-instances
extensions: CPP
