name:           uni-imports
version:        2.0.0.0
build-type:     Simple
license:        LGPL
license-file:   LICENSE
maintainer:     Christian.Maeder@dfki.de
author:         uniform@informatik.uni-bremen.de
homepage:       http://www.informatik.uni-bremen.de/uniform/wb/
category:       Uniform
synopsis:       imports
cabal-version:  >= 1.4
Tested-With:    GHC==6.8.3, GHC==6.10.4, GHC==6.12.3

exposed-modules:
  Imports.EntityNames, Imports.ErrorManagement, Imports.ErrorReporting,
  Imports.Aliases, Imports.FolderStructure, Imports.Environment,
  Imports.Imports

build-depends: base, haskell98, containers, parsec, uni-util, uni-reactor,
  uni-htk, uni-graphs

ghc-options: -fglasgow-exts
extensions: OverlappingInstances, UndecidableInstances
