name:           uni-posixutil
version:        1.1
build-type:     Simple
license:        LGPL
license-file:   ../LIZENZ.txt
author:         uniform@informatik.uni-bremen.de
homepage:       http://www.informatik.uni-bremen.de/uniform/wb/
category:       Uniform
synopsis:       Posix utilities for the uniform workbench
description:    posix utilities
exposed-modules: Posixutil.CopyFile, Posixutil.ProcessClasses, Posixutil.ChildProcess,
  Posixutil.Expect, Posixutil.SafeSystem, Posixutil.BlockSigPIPE
build-depends:
        base >=3 && < 4,
        directory,
        process,
        unix,
        haskell98,
        template-haskell,
        uni-util,
        uni-events
ghc-options: -fglasgow-exts
extensions: CPP,TemplateHaskell
