name:           uni-posixutil
version:        2.1.0.0
build-type:     Simple
license:        LGPL
license-file:   ../LIZENZ.txt
author:         uniform@informatik.uni-bremen.de
homepage:       http://www.informatik.uni-bremen.de/uniform/wb/
category:       Uniform
synopsis:       Posix utilities for the uniform workbench
cabal-version:  >= 1.2
description:    posix utilities
library
  exposed-modules:
    Posixutil.CopyFile,
    Posixutil.ProcessClasses,
    Posixutil.ChildProcess,
    Posixutil.SafeSystem,
    Posixutil.BlockSigPIPE
  build-depends:
        base >=3 && < 4,
        directory,
        process,
        haskell98,
        template-haskell,
        uni-util,
        uni-events

  if os(windows)
     CPP-Options: -DBUILD_WINDOWS
  else
     Build-Depends: unix

  ghc-options: -fglasgow-exts
  extensions: CPP
