name:           uni-reactor
version:        1.1
license:        LGPL
license-file:   ../LIZENZ.txt
author:         uniform@informatik.uni-bremen.de
homepage:       http://www.informatik.uni-bremen.de/uniform/wb/
category:       Uniform
synopsis:       Reactors for the uniform workbench
description:    uni reactor
exposed-modules: Lock, BSem, MSem, ReferenceVariables, InfoBus,
  LockEvent, WithDir
build-depends: base, haskell98, uni-util, uni-events
ghc-options: -O
