name:           uni-reactor
version:        1.1
license:        LGPL
license-file:   ../LIZENZ.txt
author:         uniform@informatik.uni-bremen.de
homepage:       http://www.informatik.uni-bremen.de/uniform/wb/
category:       Uniform
synopsis:       Reactors for the uniform workbench
description:    uni reactor
exposed-modules: Reactor.Lock, Reactor.BSem, Reactor.MSem, Reactor.ReferenceVariables, Reactor.InfoBus,
  Reactor.LockEvent, Reactor.WithDir
build-depends: base, haskell98, uni-util, uni-events
ghc-options: -O
