name:           uni-reactor
version:        1.1
build-type:     Simple
license:        LGPL
license-file:   ../LIZENZ.txt
author:         uniform@informatik.uni-bremen.de
homepage:       http://www.informatik.uni-bremen.de/uniform/wb/
category:       Uniform
synopsis:       Reactors for the uniform workbench
description:    uni reactor
exposed-modules: Reactor.Lock, Reactor.BSem, Reactor.MSem, Reactor.ReferenceVariables, Reactor.InfoBus,
  Reactor.LockEvent, Reactor.WithDir
build-depends: base >=3 && < 4, haskell98, uni-util, uni-events
